add editEvent and test for creation event

--- a/src/templates/createEvent.html
+++ b/src/templates/createEvent.html
@@ -1,4 +1,5 @@
 <div class="mt-4">
+    <a class="underline scuro" href="../{{ ROOT_URL }}public?page=homepage">Homepage &raquo;</a>
     <h2>Crea il tuo evento</h2>
 </div>
 
