--- a/src/templates/event.html
+++ b/src/templates/event.html
@@ -14,6 +14,7 @@
                     <h5 class="card-title">Info:</h5>
                     <p class="card-text">{{ event.description }}</p>
                     <a href="../{{ ROOT_URL }}user?page=editEvent&id={{ event['id'] }}" class="btn btn-primary">Modifica</a>
+                    <a href="../{{ ROOT_URL }}user?page=view-event&id={{ event['id'] }}" class="btn btn-primary">Visualizza</a>
                     <form method="post" class="right">
                         <input type="hidden" name="id" value="{{ event.id }}">
                         <input name="remove" onclick="return confirm('Procedere ad eliminare?');" type="submit" class="btn btn-danger btn-sm btn-block mt-2 circle" value="Rimuovi Evento">
