--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -3,27 +3,28 @@
 <div class="row">
 
     {% if events %}
-        {% for event in events %}
+    {% for event in events %}
 
-            <div class="card mr-2" style="width: 18rem;">
-                <img src="{{ event.img }}" class="card-img-top" alt="..." style="width:100%; height: 20rem; object-fit: cover;">
-                <div class="card-body">
-                    <h5 class="card-title">{{ event.name }}</h5>
-                    <h5 class="card-title">Data: {{ event.data }}</h5>
-                    <h5 class="card-title">Posti: {{ event.posti }}</h5>
-                    <h5 class="card-title">Info:</h5>
-                    <p class="card-text">{{ event.description }}</p>
-                    <a href="../{{ ROOT_URL }}public?page=ViewEvent&id={{ event['id'] }}" class="btn btn-primary">Visualizza</a>
-                    <form method="post" class="right">
-                        <input type="hidden" name="id" value="{{ event.id }}">
-                        <input name="remove" onclick="return confirm('Procedere ad eliminare?');" type="submit" class="btn btn-danger btn-sm btn-block mt-2 circle" value="&#x2665Preferiti">                   </form>
-                </div>
-            </div>
+    <div class="card mr-2" style="width: 18rem;">
+        <img src="{{ event.img }}" class="card-img-top" alt="..." style="width:100%; height: 20rem; object-fit: cover;">
+        <div class="card-body">
+            <h5 class="card-title">{{ event.name }}</h5>
+            <h5 class="card-title">Data: {{ event.data }}</h5>
+            <h5 class="card-title">Posti: {{ event.posti }}</h5>
+            <h5 class="card-title">Info:</h5>
+            <p class="card-text">{{ event.description }}</p>
+            <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event['id'] }}" class="btn btn-primary">Visualizza</a>
+            <form method="post" class="right">
+                <input type="hidden" name="id" value="{{ event.id }}">
+                <input name="addToWishlist" type="submit" class="btn btn-danger btn-sm btn-block mt-2 circle" value="&#x2665Preferiti">
+            </form>
+        </div>
+    </div>
 
-        {% endfor %}
+    {% endfor %}
     {% else %}
-        <h5 class="mt-5">Nessun Evento disponibile...</h5>
-        <a class="underline scuro" href="../{{ ROOT_URL }}user?page=createEvent">Crea un evento! &raquo;</a>
+    <h5 class="mt-5">Nessun Evento disponibile...</h5>
+    <a class="underline scuro" href="../{{ ROOT_URL }}user?page=createEvent">Crea un evento! &raquo;</a>
     {% endif %}
 
 </div>
