change color favourite button

--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -16,7 +16,7 @@
             <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event['id'] }}" class="btn btn-primary">Visualizza</a>
             <form method="post" class="right">
                 <input type="hidden" name="id" value="{{ event.id }}">
-                <input name="addToWishlist" type="submit" class="btn btn-danger btn-sm btn-block mt-2 circle" value="&#x2665Preferiti">
+                <input name="addToWishlist" type="submit" class="btn btn-success btn-sm btn-block mt-2 circle" value="&#x2665Preferiti">
             </form>
         </div>
     </div>
