--- a/src/templates/event.html
+++ b/src/templates/event.html
@@ -9,6 +9,11 @@
                 <img src="{{ event.img }}" class="card-img-top" alt="..." style="width:100%; height: 20rem; object-fit: cover;">
                 <div class="card-body">
                     <h5 class="card-title">{{ event.name }}</h5>
+                    <form method="post" >
+                        <input type="hidden" padding="" name="id" value="{{ event.id }}">
+                        <input type="hidden" name="add_to_favorites">
+                        <button class="btn btn-info" style="width: 50%;">&#11088; Preferiti</button>
+                    </form>
                     <h5 class="card-title">Data: {{ event.data }}</h5>
                     <h5 class="card-title">Posti: {{ event.posti }}</h5>
                     <h5 class="card-title">Info:</h5>
@@ -21,6 +26,7 @@
                     </form>
                 </div>
             </div>
+        
 
         {% endfor %}
     {% else %}
