--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -56,6 +56,7 @@
 						</a>
 						<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=event">Eventi Creati</a>
+							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=favoriteEvent">&#11088;Preferiti</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=createEvent">Crea</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}auth?page=logout">Logout</a>
 						</ul>
