--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -10,6 +10,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
 		crossorigin="anonymous"></script>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 	<title>Eventi Agile</title>
 </head>
 
@@ -55,7 +57,8 @@
 							{{ loggedInUser.email }}
 						</a>
 						<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=favoriteEvent">&#11088;Preferiti</a>
+							<a class="dropdown-item"
+								href="../{{ ROOT_URL }}user?page=favoriteEvent">&#11088;Preferiti</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=event">Eventi Creati</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=createEvent">Crea</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}auth?page=logout">Logout</a>
