--- a/src/templates/viewEvent.html
+++ b/src/templates/viewEvent.html
@@ -1,6 +1,5 @@
-<div class="jumbotron separate-top view-product-container">
-	<img src="{{ event.img }}" class="card-img-top"
-		style="width:100%; height: 40rem; object-fit: none; object-position: 50% 75%;">
+<div class="jumbotron separate-top view-event-container">
+	<img src="{{ event.img }}" class="card-img-top" style="width:100%; height: 40rem; object-fit: none; object-position: 50% 75%;">
 	<div class="card-body">
 		<h1 class="display-5">{{ event.name }}</h1>
 		<h5 class="card-title">Data: {{ event.data }}</h5>
@@ -8,4 +7,9 @@
 		<h5 class="card-title">Info:</h5>
 		<p class="card-text">{{ event.description }}</p>
 	</div>
+
+	<form method="post">
+		<input name="id" type="hidden" value="#">
+		<input name="add_to_cart" type="submit" class="btn btn-primary right mb-2" value="Registrati">
+	</form>
 </div>
