--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -2,6 +2,9 @@
 <html lang="it">
 
 <head>
+
+	<script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../{{ ROOT_URL }}assets/css/style.css">
@@ -12,13 +15,17 @@
 		crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+	<script src="https://use.fontawesome.com/75f1335a8a.js"></script>
+	
+	<link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.css">
+
 	<title>Eventi Agile</title>
 </head>
 
 <body>
 
 	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container-fluid" style="margin: 1rem; margin-right: 5rem; margin-left: 5rem;">
 			<a class="navbar-brand" href="../{{ ROOT_URL }}public/?page=homepage">Home</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -42,7 +49,7 @@
 							data-bs-toggle="dropdown" aria-expanded="false">
 							Area riservata
 						</a>
-						<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+						<ul class="dropdown-menu dropdown-menu-dark dropdown-back-dark" aria-labelledby="navbarDarkDropdownMenuLink">
 							<a class="dropdown-item" href="../{{ ROOT_URL }}auth?page=login">Login / Registrazione</a>
 						</ul>
 					</li>
@@ -50,15 +57,15 @@
 				{% endif %}
 
 				{% if loggedInUser %}
-				<ul class="navbar-nav ml-5">
+				<ul class="navbar-nav dropdown ml-5">
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
 							data-bs-toggle="dropdown" aria-expanded="false">
 							{{ loggedInUser.email }}
 						</a>
-						<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+						<ul class="dropdown-menu  dropdown-menu-dark dropdown-back-dark" aria-labelledby="navbarDarkDropdownMenuLink">
 							<a class="dropdown-item"
-								href="../{{ ROOT_URL }}user?page=favoriteEvent">&#11088;Preferiti</a>
+								href="../{{ ROOT_URL }}user?page=favoriteEvent">Preferiti</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=event">Eventi Creati</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=createEvent">Crea</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}auth?page=logout">Logout</a>
@@ -74,15 +81,15 @@
 							data-bs-toggle="dropdown" aria-expanded="false">
 							Amministrazione
 						</a>
-						<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-							<a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=products-list">Gestione
+						<ul class="dropdown-menu dropdown-menu-dark dropdown-back-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+							<!-- <a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=products-list">Gestione
 								Prodotti</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=users-list">Gestione Utenti</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=admin-faq">Gestione FAQ</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=add-others">Aggiungi
 								specifiche</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=others-list">Modifica
-								specifiche</a>
+								specifiche</a> -->
 						</ul>
 					</li>
 				</ul>
