--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -5,8 +5,10 @@
     {% if events %}
     {% for event in events %}
 
-    <div class="card mr-2" style="width: 18rem;">
-        <img src="{{ event.img }}" class="card-img-top" alt="..." style="width:100%; height: 20rem; object-fit: contain;">
+    <div class="card mr-2 mb-2" style="width: 18rem;">
+        <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event['id'] }}">
+            <img src="{{ event.img }}" class="card-img-top" alt="..." style="width:100%; height: 20rem; object-fit: contain;">
+        </a>
         <div class="card-body">
             <h5 class="card-title">{{ event.name }}</h5>
             <h5 class="card-title">Data: {{ event.data }}</h5>
@@ -18,8 +20,7 @@
             <form method="post">
                 <input type="hidden" name="id" value="{{ event.id }}">
                 {% if loggedInUser %}
-                <input name="addToFavourite" type="submit" class="btn btn-success btn-sm btn-block mt-2 circle"
-                    value="Preferiti">
+                    <input name="addToFavourite" type="submit" class="btn btn-info mt-1" value="Aggiungi ai preferiti">
                 {% endif %}
             </form>
 
