--- a/src/templates/viewEvent.html
+++ b/src/templates/viewEvent.html
@@ -1,4 +1,20 @@
 <div class="jumbotron separate-top view-event-container">
+	<img src="{{ event.img }}" class="card-img-top" style="width:100%; height: 40rem; object-fit: contain; object-position: 50% 75%;">
+	<div class="card-body">
+		<h1 class="display-5">{{ event.name }}</h1>
+		<p class="card-text">{{ event.description }}</p>
+		
+		<h5 class="card-title">Data: {{ event.data }}</h5>
+		<h5 class="card-title">Posti: {{ event.posti }}</h5>
+	</div>
+
+	<form method="post">
+		<input name="id" type="hidden" value="#">
+		<input name="add_to_cart" type="submit" class="btn btn-primary right mb-2" value="Registrati">
+	</form>
+</div>
+
+<!-- <div class="jumbotron separate-top view-event-container">
 	<img src="{{ event.img }}" class="card-img-top" style="width:100%; height: 40rem; object-fit: none; object-position: 50% 75%;">
 	<div class="card-body">
 		<h1 class="display-5">{{ event.name }}</h1>
@@ -12,4 +28,4 @@
 		<input name="id" type="hidden" value="#">
 		<input name="add_to_cart" type="submit" class="btn btn-primary right mb-2" value="Registrati">
 	</form>
-</div>
+</div> -->
