--- a/src/templates/createEvent.html
+++ b/src/templates/createEvent.html
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
         <label for="description">Descrizione</label>
-        <input name="description" id="description" type="text" class="form-control" required>
+        <textarea rows="7" name="description" id="description" type="text" class="form-control" required></textarea>
     </div>
     <div class="form-group">
         <label for="data">Data</label>
