--- a/src/templates/event.html
+++ b/src/templates/event.html
@@ -5,14 +5,13 @@
     {% if events %}
         {% for event in events %}
 
-            <div class="card mr-2" style="width: 18rem;">
+            <div class="card mr-2 mt-2" style="width: 18rem;">
                 <img src="{{ event.img }}" class="card-img-top" alt="..." style="width:100%; height: 20rem; object-fit: contain;">
                 <div class="card-body">
                     <h5 class="card-title">{{ event.name }}</h5>
                     <h5 class="card-title">Data: {{ event.data }}</h5>
                     <h5 class="card-title">Posti: {{ event.posti }}</h5>
                     <h5 class="card-title">Info:</h5>
-                    <p class="card-text">{{ event.description }}</p>
                     <a href="../{{ ROOT_URL }}user?page=editEvent&id={{ event['id'] }}" class="btn btn-primary">Modifica</a><br>
                     <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event['id'] }}" class="btn btn-primary mt-1">Visualizza</a>
                     <form method="post" class="right">
