--- a/src/templates/viewEvent.html
+++ b/src/templates/viewEvent.html
@@ -6,26 +6,20 @@
 		
 		<h5 class="card-title">Data: {{ event.data }}</h5>
 		<h5 class="card-title">Posti: {{ event.posti }}</h5>
-	</div>
 
-	<form method="post">
-		<input name="id" type="hidden" value="#">
-		<input name="add_to_cart" type="submit" class="btn btn-primary right mb-2" value="Registrati">
-	</form>
+		<form method="post">
+
+			{% if not loggedInUser %}
+				<div class="form-group col-md-7 mt-5 mb-3">
+					<label for="email">Email</label>
+					<input name="email" id="email" type="text" class="form-control" required>
+				</div>
+			{% endif %}
+
+			{% if event.posti > 0 %}
+				<button class="btn btn-primary mt-3" type="submit" name="register">Registrati</button>
+			{% endif %}
+
+		</form>
+	</div>
 </div>
-
-<!-- <div class="jumbotron separate-top view-event-container">
-	<img src="{{ event.img }}" class="card-img-top" style="width:100%; height: 40rem; object-fit: none; object-position: 50% 75%;">
-	<div class="card-body">
-		<h1 class="display-5">{{ event.name }}</h1>
-		<h5 class="card-title">Data: {{ event.data }}</h5>
-		<h5 class="card-title">Posti: {{ event.posti }}</h5>
-		<h5 class="card-title">Info:</h5>
-		<p class="card-text">{{ event.description }}</p>
-	</div>
-
-	<form method="post">
-		<input name="id" type="hidden" value="#">
-		<input name="add_to_cart" type="submit" class="btn btn-primary right mb-2" value="Registrati">
-	</form>
-</div> -->
