--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,17 @@
 /* Style */
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   font-family: "Bebas Neue", cursive !important;
   font-size: 21px !important;
+}
+
+.color-text-footer {
+  color: white !important;
 }
 
 #header {
@@ -44,5 +53,62 @@ body {
 }
 
 .dropdown-back-dark {
-    background-color: rgb(27, 27, 27) !important;
+  background-color: rgb(27, 27, 27) !important;
+}
+
+#main {
+  min-height: calc(100vh - 450px) !important;
+}
+
+/* ------------------------------------------------------------------------------
+	 Footer
+-------------------------------------------------------------------------------*/
+
+.footer {
+	text-align: left;
+    margin-top: 5rem;
+}
+.footer-top {
+	background-color: #181818;
+	padding-top: 50px;
+}
+.footer-bottom {
+	background-color: #313454;
+	padding: 20px 0;
+}
+.footer .footer-col {
+	margin-bottom: 50px;
+}
+.footer h5 {
+	color: #fff;
+}
+.footer h5 {
+	margin-bottom: 20px;
+}
+.footer p {
+	color: rgba(255, 255, 255, 0.25);
+}
+.footer a {
+	color: rgba(255, 255, 255, 0.50);
+}
+.footer a:hover {
+	color: #e84545;
+}
+.footer .footer-share {
+	margin-top: 50px;
+    padding: 0 !important;
+}
+.footer .footer-share li {
+	display: inline-block;
+	float: none;
+}
+.footer .footer-share a {
+	border: none;
+	font-size: 21px;
+	color: rgba(255, 255, 255, 0.25);
+}
+.footer .fa-heart {
+	color: #e84545;
+	font-size: 11px;
+	margin: 0 2px;
 }
