--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,9 +1,28 @@
-    <!-- Footer -->
-    <footer class="bg-dark">
-        <hr>
-        <p class="container text-light">Copyright &copy; 2019</p>
+    <!-- FOOTER -->
+    <footer class="footer" >
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col col-md-6">
+                        <h5>Contattaci</h5>
+                        <p>Via tirino<br>
+                            085 123456 / 333 1234567<br>
+                            support@footlooser.com</p>
+                        <p>Copyright © 2021 Stefano Bavota All Rights Reserved. </p>
+                    </div>
+                    <div class="footer-col col-md-6">
+                        <h5>Social</h5>
+                        <ul class="footer-share">
+                            <li class="mr-4"><a href="#"><i class="fab fa-facebook" style="font-size: 3em;"></i></a></li>
+                            <li class="mr-4"><a href="#"><i class="fab fa-instagram" style="font-size: 3em;"></i></a></li>
+                            <li class="mr-4"><a href="#"><i class="fab fa-youtube" style="font-size: 3em;"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
-    <!-- End Footer -->
+    <!-- END FOOTER -->
 
     <script src="../{{ ROOT_URL }}assets/js/main.js"></script>
     <script>
