--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -2,12 +2,10 @@
 <html lang="it">
 
 <head>
-
-	<script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
-
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../{{ ROOT_URL }}assets/css/style.css">
+	<script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -15,7 +13,10 @@
 		crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+	<!-- icone -->
 	<script src="https://use.fontawesome.com/75f1335a8a.js"></script>
+	<script src="https://kit.fontawesome.com/72ffd78db7.js" crossorigin="anonymous"></script>
+	<!-- fine icone -->
 	
 	<link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.css">
 
