--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -7,19 +7,20 @@
 
     <div class="card mr-2 mb-2" style="width: 18rem;">
         <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event['id'] }}">
-            <img src="{{ event.img }}" class="card-img-top" alt="..." style="width:100%; height: 20rem; object-fit: contain;">
+            <img src="{{ event.img }}" class="card-img-top" alt="..."
+                style="width:100%; height: 20rem; object-fit: contain;">
         </a>
         <div class="card-body">
             <h5 class="card-title">{{ event.name }}</h5>
             <h5 class="card-title">Data: {{ event.data }}</h5>
             <h5 class="card-title">Posti: {{ event.posti }}</h5>
-            
+
             <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event['id'] }}" class="btn btn-primary">Visualizza</a>
 
             <form method="post">
                 <input type="hidden" name="id" value="{{ event.id }}">
                 {% if loggedInUser %}
-                    <input name="addToFavourite" type="submit" class="btn btn-info mt-1" value="Aggiungi ai preferiti">
+                <input name="addToFavourite" type="submit" class="btn btn-info mt-1" value="Aggiungi ai preferiti">
                 {% endif %}
             </form>
 
