--- a/src/templates/createEvent.html
+++ b/src/templates/createEvent.html
@@ -25,5 +25,19 @@
         <input name="posti" id="posti" type="text" class="form-control" required>
     </div>
 
-    <button class="btn btn-primary mb-5 mt-3" type="submit" name="create">Crea</button>
+    <label for="musicType" class="">Seleziona un genere preferito</label>
+    <select name="musicType" id="musicType" type="text" class="form-control" value="{{ musicType.id }}">
+        <option value="0"> - Scegli un Genere - </option>
+        {% if musicTypes %}
+            {% for musicType in musicTypes %}
+
+                <option value="{{ musicType.id }}">{{ musicType.genere }}</option>
+
+            {% endfor %}
+        {% else %}
+            <p>Nessun Genere disponibile</p>
+        {% endif %}
+    </select>
+
+    <button class="btn btn-primary mb-2 mt-4" type="submit" name="create">Crea</button>
 </form>
