--- a/src/templates/editEvent.html
+++ b/src/templates/editEvent.html
@@ -22,9 +22,23 @@
         <input type="date" id="data" name="data" class="form-control" value="{{ event['data'] }}">
     </div>
     <div class="form-group">
-        <label for="posti">N. Posti</label>
+        <label for="posti">N. Posti da aggiungere</label>
         <input name="posti" id="posti" type="text" class="form-control" value="{{ event['posti'] }}">
     </div>
+
+    <label for="musicType" class="">Modifica genere preferito</label>
+    <select name="musicType" id="musicType" type="text" class="form-control" value="{{ musicType.id }}">
+        <option value="0"> {{ event.genere }} </option>
+        {% if musicTypes %}
+            {% for musicType in musicTypes %}
+
+                <option value="{{ musicType.id }}">{{ musicType.genere }}</option>
+
+            {% endfor %}
+        {% else %}
+            <p>Nessun Genere disponibile</p>
+        {% endif %}
+    </select>
 
     <input type="hidden" name="id" value="{{ event['id'] }}">
     <input name="edit" type="submit" class="btn btn-primary mt-5" value="Modifica">
