--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -65,8 +65,8 @@
 							{{ loggedInUser.email }}
 						</a>
 						<ul class="dropdown-menu  dropdown-menu-dark dropdown-back-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-							<a class="dropdown-item"
-								href="../{{ ROOT_URL }}user?page=favoriteEvent">Preferiti</a>
+							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=profile">Profilo</a>
+							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=favoriteEvent">Preferiti</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=event">Eventi Creati</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=createEvent">Crea</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}auth?page=logout">Logout</a>
