--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -24,7 +24,21 @@
         <input name="confirm_password" id="confirm_password" type="password" class="form-control" required>
     </div>
 
-    <button class="btn btn-primary mb-5 mt-3" type="submit" name="register">Register</button>
+    <label for="musicType" class="">Seleziona un genere preferito</label>
+    <select name="musicType" id="musicType" type="text" class="form-control" value="{{ musicType.id }}">
+        <option value="0"> - Scegli un Genere - </option>
+        {% if musicTypes %}
+            {% for musicType in musicTypes %}
+
+                <option value="{{ musicType.id }}">{{ musicType.genere }}</option>
+
+            {% endfor %}
+        {% else %}
+            <p>Nessun Genere disponibile</p>
+        {% endif %}
+    </select>
+
+    <button class="btn btn-primary mb-2 mt-5" type="submit" name="register">Register</button>
 </form>
 
 Hai già un account? <a class="underline scuro" href="../{{ ROOT_URL }}auth?page=login">Effettua il Login!
