--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -68,6 +68,7 @@
 								href="../{{ ROOT_URL }}user?page=favoriteEvent">Preferiti</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=event">Eventi Creati</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=createEvent">Crea</a>
+							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=calendar">Calendario</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}auth?page=logout">Logout</a>
 						</ul>
 					</li>
