--- a/src/templates/editEvent.html
+++ b/src/templates/editEvent.html
@@ -23,12 +23,12 @@
     </div>
     <div class="form-group">
         <label for="posti">N. Posti da aggiungere</label>
-        <input name="posti" id="posti" type="text" class="form-control" value="{{ event['posti'] }}">
+        <input name="posti" id="posti" type="text" class="form-control" value="0">
     </div>
 
     <label for="musicType" class="">Modifica genere preferito</label>
-    <select name="musicType" id="musicType" type="text" class="form-control" value="{{ musicType.id }}">
-        <option value="0"> {{ event.genere }} </option>
+    <select name="musicType" id="musicType" type="text" class="form-control" value="{{ event.music_type_id }}">
+        <option value="{{ event.music_type_id }}"> {{ event.genere }} </option>
         {% if musicTypes %}
             {% for musicType in musicTypes %}
 
