modify homepage and calendar page

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -60,6 +60,10 @@ body {
   min-height: calc(100vh - 450px) !important;
 }
 
+.center-button {
+  text-align: center;
+}
+
 /* ------------------------------------------------------------------------------
 	 Footer
 -------------------------------------------------------------------------------*/
