--- a/src/templates/favoriteEvent.html
+++ b/src/templates/favoriteEvent.html
@@ -2,26 +2,29 @@
 <div class="row">
 
     {% if favoriteEvent %}
-        {% for event in favoriteEvent %}
+    {% for event in favoriteEvent %}
 
-            <div class="card mr-2 mt-2" style="width: 18rem;">
-                <img src="{{ event.img }}" class="card-img-top" alt="..." style="width:100%; height: 20rem; object-fit: contain;">
-                <div class="card-body">
-                    <h5 class="card-title">{{ event.name }}</h5>
-                    <h5 class="card-title">Data: {{ event.data }}</h5>
-                    <h5 class="card-title">Posti: {{ event.posti }}</h5>
-                    <h5 class="card-title">Info:</h5>
-                    <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event['id'] }}" class="btn btn-primary mt-1">Visualizza</a>
-                    <form method="post" class="right">
-                        <input type="hidden" name="id" value="{{ event.id }}">
-                        <input name="remove_fav" onclick="return confirm('Procedere ad eliminare?');" type="submit" class="btn btn-danger mt-2 circle" value="Rimuovi Evento">
-                    </form>
-                </div>
-            </div>
+    <div class="card mr-2 mt-2" style="width: 18rem;">
+        <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event.id }}">
+            <img src="{{ event.img }}" class="card-img-top" alt="..."
+                style="width:100%; height: 20rem; object-fit: contain;">
+        </a>
+        <div class="card-body">
+            <h5 class="card-title">{{ event.name }}</h5>
+            <h5 class="card-title">Data: {{ event.data }}</h5>
+            <h5 class="card-title">Posti: {{ event.posti }}</h5>
+            <h5 class="card-title">Info:</h5>
+            <form method="post" class="right">
+                <input type="hidden" name="id" value="{{ event.id }}">
+                <input name="remove_fav" onclick="return confirm('Procedere ad eliminare?');" type="submit"
+                    class="btn btn-danger mt-2 circle" value="Rimuovi Evento">
+            </form>
+        </div>
+    </div>
 
-        {% endfor %}
+    {% endfor %}
     {% else %}
-        <p>Nessun evento disponibile...</p>
+    <p>Nessun evento disponibile...</p>
     {% endif %}
-    
+
 </div>
