add admin pages

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -81,7 +81,7 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
 							data-bs-toggle="dropdown" aria-expanded="false">
-							{{ loggedInUser.email }}
+							Admin Evento
 						</a>
 						<ul class="dropdown-menu  dropdown-menu-dark dropdown-back-dark"
 							aria-labelledby="navbarDarkDropdownMenuLink">
@@ -101,14 +101,7 @@
 						</a>
 						<ul class="dropdown-menu dropdown-menu-dark dropdown-back-dark"
 							aria-labelledby="navbarDarkDropdownMenuLink">
-							<!-- <a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=products-list">Gestione
-								Prodotti</a>
-							<a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=users-list">Gestione Utenti</a>
-							<a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=admin-faq">Gestione FAQ</a>
-							<a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=add-others">Aggiungi
-								specifiche</a>
-							<a class="dropdown-item" href="../{{ ROOT_URL }}admin?page=others-list">Modifica
-								specifiche</a> -->
+							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=admin">Gestione Utenti</a>
 						</ul>
 					</li>
 				</ul>
