--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -1,4 +1,6 @@
-<h1>Elenco Utenti</h1>
+<div class="mt-5 mb-4">
+    <h1>Elenco Utenti</h1>
+</div>
 
 {% if users|length > 0 %}
 <table class="table table-hover">
