--- a/src/templates/createEvent.html
+++ b/src/templates/createEvent.html
@@ -25,7 +25,7 @@
         <input name="posti" id="posti" type="text" class="form-control" required>
     </div>
 
-    <label for="musicType" class="">Seleziona un genere preferito</label>
+    <label for="musicType" class="">Seleziona un genere</label>
     <select name="musicType" id="musicType" type="text" class="form-control" value="{{ musicType.id }}">
         <option value="0"> - Scegli un Genere - </option>
         {% if musicTypes %}
