--- a/src/templates/editEvent.html
+++ b/src/templates/editEvent.html
@@ -26,7 +26,7 @@
         <input name="posti" id="posti" type="text" class="form-control" value="0">
     </div>
 
-    <label for="musicType" class="">Modifica genere preferito</label>
+    <label for="musicType" class="">Modifica genere</label>
     <select name="musicType" id="musicType" type="text" class="form-control" value="{{ event.music_type_id }}">
         <option value="{{ event.music_type_id }}"> {{ event.genere }} </option>
         {% if musicTypes %}
