--- a/src/templates/viewEvent.html
+++ b/src/templates/viewEvent.html
@@ -2,13 +2,12 @@
 	<img src="{{ event.img }}" class="card-img-top"
 		style="width:100%; height: 40rem; object-fit: contain; object-position: 50% 75%;">
 	<div class="card-body">
-		<h1 class="display-5">{{ event.name }}</h1>
-		<p class="card-text">{{ event.description }}</p>
-
-		<h5 class="card-title">Data: {{ event.data }}</h5>
-		<h5 class="card-title">Posti: {{ event.posti }}</h5>
-
 		<form method="post">
+			<h1 class="display-5">{{ event.name }}</h1>
+			<p class="card-text">{{ event.description }}</p>
+
+			<h5 class="card-title">Data: {{ event.data }}</h5>
+			<h5 class="card-title">Posti: {{ event.posti }}</h5>
 
 			{% if event.posti > 0 %}
 
@@ -19,9 +18,9 @@
 			</div>
 			{% endif %}
 
+			<input type="hidden" name="id" value="{{ event.id }}">
 			<button class="btn btn-primary mt-3" type="submit" name="register">Registrati</button>
 			{% endif %}
-
 		</form>
 	</div>
 
@@ -29,40 +28,41 @@
 
 {% if loggedInUser %}
 
-	<form method="post">
-		<div class="form-group">
-			<label for="answer">Commenta: </label>
-			<textarea rows="7" name="answer" id="answer" type="text" class="form-control" required></textarea>
-		</div>
+<form method="post">
+	<div class="form-group">
+		<label for="answer">Commenta: </label>
+		<textarea rows="7" name="answer" id="answer" type="text" class="form-control" required></textarea>
+	</div>
 
-		<button class="btn btn-primary mb-5 mt-3" type="submit" name="comment">Commenta</button>
-	</form>
+	<button class="btn btn-primary mb-5 mt-3" type="submit" name="comment">Commenta</button>
+</form>
 
-	{% if allAnswer %}
-	{% for answers in allAnswer %}
+{% if allAnswer %}
+{% for answers in allAnswer %}
 
-		<div class="card mb-2">
-			<div class="card-body">
-				{% if loggedInUser.id == answers.user_id %}
-					<h4 class="card-title" style="color: lightseagreen;">{{ answers.nome }} {{ answers.cognome }}</h4>
-				{% else %}
-					<h4 class="card-title" style="color: lightcoral;">{{ answers.nome }} {{ answers.cognome }}</h4>
-				{% endif %}
+<div class="card mb-2">
+	<div class="card-body">
+		{% if loggedInUser.id == answers.user_id %}
+		<h4 class="card-title" style="color: lightseagreen;">{{ answers.nome }} {{ answers.cognome }}</h4>
+		{% else %}
+		<h4 class="card-title" style="color: lightcoral;">{{ answers.nome }} {{ answers.cognome }}</h4>
+		{% endif %}
 
-				<p class="card-text">{{ answers.answer }}</p>
+		<p class="card-text">{{ answers.answer }}</p>
 
-				{% if loggedInUser.id == answers.user_id %}
-					<form method="post" class="right">
-						<input type="hidden" name="id" value="{{ answers.answer_id }}">
-						<input name="remove" onclick="return confirm('Procedere ad eliminare?');" type="submit" class="btn btn-danger mt-2 circle" value="Elimina commento">
-					</form>
-				{% endif %}
-			</div>
-		</div>
+		{% if loggedInUser.id == answers.user_id %}
+		<form method="post" class="right">
+			<input type="hidden" name="id" value="{{ answers.answer_id }}">
+			<input name="remove" onclick="return confirm('Procedere ad eliminare?');" type="submit"
+				class="btn btn-danger mt-2 circle" value="Elimina commento">
+		</form>
+		{% endif %}
+	</div>
+</div>
 
-	{% endfor %}
-	{% else %}
-		<p>Nessun Commento</p>
-	{% endif %}
+{% endfor %}
+{% else %}
+<p>Nessun Commento</p>
+{% endif %}
 
 {% endif %}
