--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -87,6 +87,7 @@
 							aria-labelledby="navbarDarkDropdownMenuLink">
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=event">Eventi Creati</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=createEvent">Crea Evento</a>
+							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=historicEvent">Storico Eventi</a>
 						</ul>
 					</li>
 				</ul>
