--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -42,6 +42,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="../{{ ROOT_URL }}user?page=favoriteEvent">Preferiti</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../{{ ROOT_URL }}user?page=historicEvent">Storico</a>
+					</li>
 					{% endif %}
 				</ul>
 
