--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -8,22 +8,78 @@
             aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
+        {% if events %}
+        {% set active = true %}
+        {% for event in events %}
+        {% if active %}
         <div class="carousel-item active">
-            <img src="https://www.visionidistorte.it/wp-content/uploads/2015/12/people-concert-wallpaper-1080p-backgrounds-concert-people-background-25952-1024x576.jpg" class="d-block w-100" alt="...">
+            <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event.id }}"> <img src="{{ event.img }}"
+                    class="d-block w-100" width="130px" height="200px" alt="..."></a>
         </div>
+        {% set active = false %}
+        {% else %}
         <div class="carousel-item">
-            <img src="https://wallpapercave.com/wp/wp4035870.jpg" class="d-block w-100" alt="...">
+            <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event.id }}"> <img src="{{ event.img }}"
+                    class="d-block w-100" width="130px" height="200px" alt="..."></a>
         </div>
-        <div class="carousel-item">
-            <img src="https://www.wallpapertip.com/wmimgs/71-713163_avicii-concert-wallpaper-avicii-in-concert.jpg" class="d-block w-100" alt="...">
-        </div>
+        {% endif %}
+        {% endfor %}
+        {% else %}
+        <h5 class="mt-5">Nessun Evento disponibile...</h5>
+        <a class="underline scuro" href="../{{ ROOT_URL }}user?page=createEvent">Crea un evento! &raquo;</a>
+        {% endif %}
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
         data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+<div id="carouselExampleIndicators2" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div class="carousel-indicators2">
+        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        {% if suggestedEvents %}
+        {% set active = true %}
+        {% for event in suggestedEvents %}
+        {% if active %}
+        <div class="carousel-item active">
+            <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event.id }}"> <img src="{{ event.img }}"
+                    class="d-block w-100" width="130px" height="200px" alt="..."></a>
+        </div>
+        {% set active = false %}
+        {% else %}
+        <div class="carousel-item">
+            <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event.id }}"> <img src="{{ event.img }}"
+                    class="d-block w-100" width="130px" height="200px" alt="..."></a>
+        </div>
+        {% endif %}
+        {% endfor %}
+        {% else %}
+        <h5 class="mt-5">Nessun Evento disponibile...</h5>
+        <a class="underline scuro" href="../{{ ROOT_URL }}user?page=createEvent">Crea un evento! &raquo;</a>
+        {% endif %}
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2"
         data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
