--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -84,13 +84,12 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
 							data-bs-toggle="dropdown" aria-expanded="false">
-							Admin Evento
+							Tuoi Eventi
 						</a>
 						<ul class="dropdown-menu  dropdown-menu-dark dropdown-back-dark"
 							aria-labelledby="navbarDarkDropdownMenuLink">
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=event">Eventi Creati</a>
 							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=createEvent">Crea Evento</a>
-							<a class="dropdown-item" href="../{{ ROOT_URL }}user?page=historicEvent">Storico Eventi</a>
 						</ul>
 					</li>
 				</ul>
@@ -101,7 +100,7 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
 							data-bs-toggle="dropdown" aria-expanded="false">
-							Amministrazione
+							Admin
 						</a>
 						<ul class="dropdown-menu dropdown-menu-dark dropdown-back-dark"
 							aria-labelledby="navbarDarkDropdownMenuLink">
