--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -9,13 +9,15 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://www.visionidistorte.it/wp-content/uploads/2015/12/people-concert-wallpaper-1080p-backgrounds-concert-people-background-25952-1024x576.jpg" class="d-block w-100" alt="...">
+            <img src="https://www.visionidistorte.it/wp-content/uploads/2015/12/people-concert-wallpaper-1080p-backgrounds-concert-people-background-25952-1024x576.jpg"
+                class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
             <img src="https://wallpapercave.com/wp/wp4035870.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="https://www.wallpapertip.com/wmimgs/71-713163_avicii-concert-wallpaper-avicii-in-concert.jpg" class="d-block w-100" alt="...">
+            <img src="https://www.wallpapertip.com/wmimgs/71-713163_avicii-concert-wallpaper-avicii-in-concert.jpg"
+                class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
