--- a/src/templates/historicEvent.html
+++ b/src/templates/historicEvent.html
@@ -1,20 +1,18 @@
-<h2>Storico eventi registrati</h2>
+<h2 class="mt-4">Storico eventi registrati</h2>
 <div class="row">
 
     {% if historicEvent %}
     {% for event in historicEvent %}
 
     <div class="card mr-2 mt-2" style="width: 14rem;">
-        
-            <img src="{{ event.img }}" class="card-img-top" alt="..."
-                style="width:100%; height: 20rem; object-fit: contain;">
-        </a>
+        <img src="{{ event.img }}" class="card-img-top" alt="..."
+            style="width:100%; height: 20rem; object-fit: contain;">
         <div class="card-body">
             <h5 class="card-title">{{ event.name }}</h5>
             <h5 class="card-title">Data: {{ event.data }}</h5>
             <h5 class="card-title">Posti: {{ event.posti }}</h5>
             <h5 class="card-title">Info:</h5>
-            
+
         </div>
     </div>
 
