fix graphic things

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -64,6 +64,12 @@ body {
   text-align: center;
 }
 
+.bottom-left {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+}
+
 /* ------------------------------------------------------------------------------
 	 Footer
 -------------------------------------------------------------------------------*/
