--- a/src/templates/suggest.html
+++ b/src/templates/suggest.html
@@ -7,7 +7,7 @@
     <div class="card mr-2 mt-1" style="width: 14rem;">
         <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event.id }}">
             <img src="{{ event.img }}" class="card-img-top" alt="..."
-                style="width:100%; height: 20rem; object-fit: contain;">
+                style="width: 100%; height: 15vw; object-fit: cover;">
         </a>
     </div>
 
@@ -24,8 +24,14 @@
 
     <div class="card mr-2 mt-1" style="width: 14rem;">
         <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event.id }}">
-            <img src="{{ event.img }}" class="card-img-top" alt="..."
-                style="width:100%; height: 20rem; object-fit: contain;">
+            <div class="bottom-left">
+                <img src="https://www.icripi.edu.it/wp-content/uploads/2020/06/new-png-transparent.png" alt=""
+                    style="width: 70px; height: 70px;">
+            </div>
+            <div style="width: 100%;">
+                <img src="{{ event.img }}" class="card-img-top" alt="..."
+                    style="width: 100%; height: 15vw; object-fit: cover;">
+            </div>
         </a>
     </div>
 
