--- a/src/templates/calendar.html
+++ b/src/templates/calendar.html
@@ -41,8 +41,10 @@
 			<h5 class="card-title">Data: {{ event.data }}</h5>
 			<h5 class="card-title">{{ event.name }}</h5>
 		</div>
-		<img src="{{ event.img }}" class="card-img-top" alt="..."
-			style="width:100%; height: 20rem; object-fit: contain;">
+		<a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event.eventi_id }}">
+            <img src="{{ event.img }}" class="card-img-top" alt="..."
+                style="width:100%; height: 20rem; object-fit: contain;">
+        </a>
 	</div>
 
 	{% endfor %}
