--- a/src/templates/suggest.html
+++ b/src/templates/suggest.html
@@ -7,7 +7,7 @@
     <div class="card mr-2 mt-1" style="width: 14rem;">
         <a href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event.id }}">
             <img src="{{ event.img }}" class="card-img-top" alt="..."
-                style="width: 100%; height: 15vw; object-fit: cover;">
+                style="width: 100%; height: 20rem; object-fit: cover;">
         </a>
     </div>
 
@@ -30,7 +30,7 @@
             </div>
             <div style="width: 100%;">
                 <img src="{{ event.img }}" class="card-img-top" alt="..."
-                    style="width: 100%; height: 15vw; object-fit: cover;">
+                    style="width: 100%; height: 20rem; object-fit: cover;">
             </div>
         </a>
     </div>
