--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -7,7 +7,7 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
             aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner">
+    <div class="carousel-inner banner">
         <div class="carousel-item active">
             <img src="https://www.visionidistorte.it/wp-content/uploads/2015/12/people-concert-wallpaper-1080p-backgrounds-concert-people-background-25952-1024x576.jpg"
                 class="d-block w-100" alt="...">
