--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -70,6 +70,10 @@ body {
   left: 16px;
 }
 
+/* .banner {
+  height: 900px !important;
+} */
+
 /* ------------------------------------------------------------------------------
 	 Footer
 -------------------------------------------------------------------------------*/
