--- a/src/templates/viewEvent.html
+++ b/src/templates/viewEvent.html
@@ -1,4 +1,4 @@
-<div class="jumbotron separate-top view-event-container">
+<div class="jumbotron separate-top view-event-container mt-5">
 	<img src="{{ event.img }}" class="card-img-top"
 		style="width:100%; height: 40rem; object-fit: contain; object-position: 50% 75%;">
 	<div class="card-body">
