--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -9,15 +9,15 @@
     </div>
     <div class="carousel-inner banner">
         <div class="carousel-item active">
-            <img src="https://www.visionidistorte.it/wp-content/uploads/2015/12/people-concert-wallpaper-1080p-backgrounds-concert-people-background-25952-1024x576.jpg"
+            <img src="https://wallpapertag.com/wallpaper/full/c/d/e/142088-free-download-concert-background-2000x1099-images.jpg"
                 class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="https://wallpapercave.com/wp/wp4035870.jpg" class="d-block w-100" alt="...">
+            <img src="https://www.ctvnews.ca/polopoly_fs/1.5375908.1617708896!/httpImage/image.jpg_gen/derivatives/landscape_1020/image.jpg" class="d-block w-100"
+                alt="...">
         </div>
         <div class="carousel-item">
-            <img src="https://www.wallpapertip.com/wmimgs/71-713163_avicii-concert-wallpaper-avicii-in-concert.jpg"
-                class="d-block w-100" alt="...">
+            <img src="https://www.collinsdictionary.com/images/full/concert_295115348.jpg" class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
