--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../{{ ROOT_URL }}assets/css/style.css">
+	<link rel="shortcut icon" href="../{{ ROOT_URL }}assets/img/logo-ico.png" />
 	<script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -28,7 +29,8 @@
 	<!-- Navbar -->
 	<nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container-fluid" style="margin: 1rem; margin-right: 5rem; margin-left: 5rem;">
-			<a class="navbar-brand" href="../{{ ROOT_URL }}public/?page=homepage">Home</a>
+			<a class="navbar-brand" href="../{{ ROOT_URL }}public/?page=homepage"><img
+				src="../{{ ROOT_URL }}assets/img/logo-big.png" alt="Home" width="145" height="60" /></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
 				aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
