--- a/src/templates/carousel.html
+++ b/src/templates/carousel.html
@@ -13,10 +13,10 @@
                 class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="https://wallpapercave.com/wp/wp4035870.jpg" class="d-block w-100" alt="...">
+            <img src="https://wallpaperplay.com/walls/full/e/6/b/150718.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="https://www.wallpapertip.com/wmimgs/71-713163_avicii-concert-wallpaper-avicii-in-concert.jpg"
+            <img src="https://wallpapertag.com/wallpaper/full/c/d/e/142088-free-download-concert-background-2000x1099-images.jpg"
                 class="d-block w-100" alt="...">
         </div>
     </div>
@@ -31,3 +31,4 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+
