--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -25,8 +25,12 @@
                 {% endif %}
             </td>
             <td>
-                <a class="btn btn-outline-secondary btn-sm left"
-                    href="../{{ ROOT_URL }}user?page=viewAdmin&id={{ user.id }}">Modifica</a>
+                <a class="btn btn-outline-secondary btn-sm left" href="../{{ ROOT_URL }}user?page=viewAdmin&id={{ user.id }}">Modifica</a>
+                
+                <form method="post" class="right">
+                    <input type="hidden" name="id" value="{{ user.id }}">
+                    <input name="delete" onclick="return confirm('Procedere ad eliminare?');" type="submit" class="btn btn-outline-danger btn-sm mt-1" value="Elimina">
+                </form>
             </td>
         </tr>
         {% endfor %}
