--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -34,7 +34,7 @@
 
                 <form class="card p-2">
                     <div class="input-group">
-                        <a href="../{{ ROOT_URL }}user/?page=favoriteEvent" class="btn btn-primary btn-sm btn-block circle">Visualizza Lista</a>
+                        <a href="../{{ ROOT_URL }}user/?page=favoriteEvent" class="btn btn-primary btn-sm btn-block circle">Visualizza Tutti i preferiti</a>
                     </div>
                 </form>
             </div>
