--- a/src/templates/calendar.html
+++ b/src/templates/calendar.html
@@ -1,6 +1,6 @@
 <h2 class="mt-4">Calendario</h2>
 
-<div class="mb-5 mt-4 mr-5">
+<div class="mb-5 mt-4 mr-5 row">
 	<form method="post">
 
 		<select name="mese">
@@ -29,7 +29,7 @@
 	</form>
 
 	<form method="post" action="../classes/download-ics.php">
-		<input type="submit" value="Add to Calendar">
+		<input type="submit" class="btn btn-primary circle mt-1" value="Esporta calendario">
 	</form>
 </div>
 
@@ -37,7 +37,7 @@
 	{% if calendarEvent %}
 	{% for event in calendarEvent %}
 	<div class="card mr-2 mb-2" style="width: 14rem;">
-		<div class="mt-2">
+		<div class="">
 			<h5 class="card-title">Data: {{ event.data }}</h5>
 			<h5 class="card-title">{{ event.name }}</h5>
 		</div>
