nite for pagination

--- a/src/templates/allEvent.html
+++ b/src/templates/allEvent.html
@@ -42,6 +42,7 @@
     <a class="underline scuro" href="../{{ ROOT_URL }}user?page=createEvent">Crea un evento! &raquo;</a>
     {% endif %}
 
+    <!-- numeri per la pagina -->
     <nav aria-label="Page navigation example">
         <ul class="pagination">
             {% for pageNumber in pagesNumber %}
